<resources>
    <string name="app_name">Minimon</string>
    <string name="app_name_kr">미니몬</string>
    <string name="naver_ClientID">pFdVUe7QyF5niz__G19O</string>
    <string name="naver_ClientSecret">yopsmvueGB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="media_url_hls">http://qthttp.apple.com.edgesuite.net/1010qwoeiuryfg/sl.m3u8</string>
    <string name="title_login">미니몬 서비스 로그인</string>
    <string name="title_sns">소셜 로그인</string>
    <string name="notice_exit_app">한번 더 뒤로가기 누르면 종료됩니다.</string>
    <string name="notice_loging">잠시만 기다리세요. 로그인 중입니다.</string>
    <string name="notice_error_login">아이디 또는 비밀번호를 확인하세요.</string>
    <string name="notice_success_signup">가입을 환영합니다. 즐거운 시간 되십시오.</string>
    <string name="notice_none_input_id">아이디를 입력해 주세요.</string>
    <string name="notice_none_input_nickname">닉네임을 입력해 주세요.</string>
    <string name="notice_none_input_pw">비밀번호를 입력해 주세요.</string>
    <string name="notice_none_input_pwc">확인 비밀번호를 입력해 주세요.</string>
    <string name="notice_none_input_email">이메일을 입력해 주세요.</string>
    <string name="notice_error_input_id">아이디는 4글자에서 12글자까지 영문 또는 숫자를 이용하여 입력하여 주시기 바랍니다.</string>
    <string name="notice_error_input_nickname">닉네임은 2글자에서 12글자까지 이용하여 입력하여 주시기 바랍니다.</string>
    <string name="notice_error_input_pw">비밀번호는 6글자에서 12글자까지 이용하여 입력하여 주시기 바랍니다.</string>
    <string name="notice_error_input_pwc">비밀번호 확인이 잘못되었습니다. 다시 한번 입력하여 주시기 바랍니다.</string>
    <string name="notice_error_input_email">잘못된 이메일입니다.</string>
    <string name="notice_error_agree">이용약관 및 개인정보 보호정책에 동의가 되어 있지 않습니다. 동의 후 가입하시기 바랍니다.</string>
    <string name="notice_duplicate_id">사용중인 아이디 입니다.</string>
    <string name="notice_duplicate_nickname">사용중인 닉네임 입니다.</string>
    <string name="notice_find_id">회원님의 아이디는 %1$s입니다.</string>
    <string name="notice_not_found_id">이메일과 일치하는 아이디가 없습니다.</string>
    <string name="notice_close">[닫기]</string>
    <string name="notice_logout">정상적으로 로그아웃 되었습니다</string>
    <string name="notice_confirm_ok">확인</string>
    <string name="notice_confirm_cancel">취소</string>
    <string name="notice_purchase">이용권을 구매하시면 언제 어디서나,\n한 달 내내 무제한으로 시청할 수 있습니다.\n이용권을 구매하시겠습니까?</string>
    <string name="btn_home">홈이동</string>
    <string name="btn_login">로그인</string>
    <string name="btn_signup_1">간편 회원가입</string>
    <string name="btn_signup">회원가입</string>
    <string name="btn_autologin">자동 로그인</string>
    <string name="agree_total">전체 동의</string>
    <string name="agree_termsofuse">서비스 이용약관</string>
    <string name="agree_privacypolicy">개인정보 취급방침</string>
    <string name="view_agree">전문 보기</string>
    <string name="usr_id">아이디</string>
    <string name="usr_pw">비밀번호</string>
    <string name="usr_email">이메일</string>
    <string name="usr_nickname">닉네임</string>
    <string name="usr_pw_confirm">비밀번호 확인</string>
    <string name="find_usr">아이디/비밀번호 찾기</string>
    <string name="find_usr_id">아이디 찾기</string>
    <string name="find_usr_id_description">회원가입 시 사용한 e-mail 정보를 입력하시기 바랍니다.</string>
    <string name="find_usr_pw">비밀번호 찾기</string>
    <string name="find_usr_pw_description">회원의 아이디와 e-mail 정보를 입력하시기 바랍니다.</string>
    <string name="hint_input_id">영문/숫자 4~12자</string>
    <string name="hint_input_pw">영문/숫자 6~12자</string>
    <string name="hint_input_pw_confirm">비밀번호를 입력하세요</string>
    <string name="hint_input_email">이메일을 입력하세요</string>
    <string name="hint_input_nickname">2~12자</string>
    <string name="new_usr">신규 회원 가입</string>
    <string name="reset_password">신규 비밀번호 발급</string>
    <string name="login_naver">NAVER 로그인</string>
    <string name="login_kakao">KAKAO 로그인</string>
    <string name="login_facebook">FACEBOOK 로그인</string>
    <string name="login_google">GOOGLE 로그인</string>
    <string name="user_point">포인트</string>
    <string name="user_fixed">정액제</string>
    <string name="mark_point">P</string>
    <string name="mark_fixed">D</string>
    <string name="menu_charge">이용권</string>
    <string name="menu_watch">시청영상</string>
    <string name="menu_user_page">회원정보</string>
    <string name="menu_customer">고객센터</string>
    <string name="menu_logout">로그아웃</string>
    <string name="menu_last_watched">최근 본 영상</string>
    <string name="menu_favorite">찜한영상</string>
    <string name="menu_subscribe">구독채널</string>
    <string name="menu_point_history">포인트내역</string>
    <string name="menu_pay_history">결제내역</string>
    <string name="menu_setting">환경설정</string>
    <string name="menu_my_info">내 정보</string>
    <string name="init_nickname">User nickname</string>
    <string name="init_point">96,500</string>
    <string name="init_fixed">2018.12.24</string>
    <string name="setting_player_set">플레이어 설정</string>
    <string name="setting_player_set_data">데이터 설정</string>
    <string name="setting_player_set_bandwidth">플레이어 기본화질 설정</string>
    <string name="setting_player_set_bandwidth_info">플레이어에서 자동으로 재생되는 화질을 선택합니다.</string>
    <string name="setting_player_set_data_info">LTE/3G 연결 시 플레이어 재생 허용</string>
    <string name="setting_alert">알림 설정</string>
    <string name="setting_alert_event">이벤트 혜택 제공 알림</string>
    <string name="setting_alert_service">서비스 공지 알림</string>
    <string name="setting_alert_event_info">할인혜택,이벤트등 다양한 정보를 받으실 수 있습니다.</string>
    <string name="setting_alert_service_info">채널 업데이트, 미니몬 소식 등을 받으실 수 있습니다.</string>
    <string name="alert_wifi_not_found">Wifi 환경이 아닙니다. LTE/3G 데이터를 사용하시겠습니까?</string>
    <string name="setting_app_info">App 정보</string>
    <string name="setting_app_delete_cache">저장된 캐시데이터 삭제</string>
    <string name="setting_app_delete_cache_info">검색기록 등 임시저장된 데이터를 삭제합니다.</string>
    <string name="setting_app_license">오픈소스 라이센스</string>
    <string name="clear_cache">캐시를 삭제하였습니다.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_name_main">main</string>
    <string name="page_name_info">info</string>
    <string name="page_name_update_info">update.info</string>
    <string name="page_name_update_pwd">update.pwd</string>
    <string name="page_name_pay_list">pay.list</string>
    <string name="page_name_point_list">point.list</string>
    <string name="page_name_purchase">purchase</string>
    <string name="page_name_like">like</string>
    <string name="page_name_keep">keep</string>
    <string name="page_name_cookie_list">cookie.list</string>
    <string name="page_name_policy">policy</string>
    <string name="page_name_faq">faq</string>
    <string name="page_name_notice">notice</string>
    <string name="page_name_qna_list">qna.list</string>
    <string name="page_name_qna_write">qna.write</string>
    <string name="page_name_index">index</string>
    <string name="page_name_fixed_cancel">fixed.cancel</string>
    <string name="page_name_result_vaccount">result.veccount</string>
    <string name="page_name_result_succ">result.succ</string>
    <string name="page_name_result_fail">result_fail</string>
    <string name="page_name_result_cancel">result.cancel</string>
    <string name="page_name_search">search</string>
    <string name="page_name_episode">episode</string>
    <string name="page_name_episode_list">episode.list</string>
    <string name="page_name_category">category</string>
    <string name="page_name_steelcut">steelcut</string>
    <string name="intro_1">10분의 힐링, 미니몬</string>
    <string name="intro_2">국내 최초 웹드라마 플랫폼 미니몬\n언제 어디서나 고화질로 즐기세요.</string>
    <string name="server_error_title">미니몬 서비스 이용에 불편을 드려 죄송합니다.</string>
    <string name="server_error_explain">서비스 점검 중으로 서비스 접속이 원활하지 않습니다.\n자세한 사항은 미니몬 웹 서비스 공지사항을 확인 바랍니다.</string>
    <string name="service_update">서비스 업데이트중</string>
    <string name="service_update_date">YYYY.MM.DD 24H:MM ~ YYYY.MM.DD 24H:MM</string>
    <string name="service_update_srr">서비스 이용에 불편을 드려 죄송합니다.</string>
</resources>